editing design chapter on technical support

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -612,7 +612,24 @@ One family dropped out and in their exit interview they shared that at one point
 
 The value of playfulness is illustrated with one exit interview with a parent where they shared their reasons for leaving the program. At one stage after a week where they had missed a session, their family looked around and saw other groups involved in 'hardcore coding' and no longer felt at home. They compared this previous sessions which had more fun and group oriented activity.
 
-I was struck that his incident happened during a session where I had not played customary drama games to create an inclusive environment. The games had been omitted as I was responding to a sense of urgency coming from families to solve problems. The scarcity in facilitator time drove me to crack on supporting families to debug code errors. The incident lead me to greater reflection on ongoing measures needed to prevent participant drop out for due to cultural tensions and negative affect to the working community. These include:
+I was struck that his incident happened during a session where I had not played customary drama games to create an inclusive environment. The games had been omitted as I was responding to a sense of urgency coming from families to solve problems. The scarcity in facilitator time drove me to crack on supporting families to debug code errors.
+
+
+**Gulfs between desires and reality**
+
+While members of this family were able to engage in planing via sketching on paper and in creating pixel art, they were reliant on others to implement code changes. This was in part due to improvised group roles.
+
+The freedom of choice and imagination allowed by desining on paper and via pixel art created compounding tensions. One crisis point involved a frustration of a child who was not able to implement a feature they wanted to add to the game next:
+
+A 3d bee design of one participant which happened when there was no framework.
+
+While personal expression can facilitates engagement and motivation it can lead to conflict if desired changes are not realistic.
+
+In order to accelerate the process of making a game to fit into contextual expectations of an acceptable project timeframe, I pre-chose the genre of game to be made as a two dimensional (2D) platformer game.
+
+<!-- Based on my previous teaching experience, analysis of literature and knowledge of platform games, I pre-prepared a set of coded example and tutorials to implement a range of game design patterns. -->
+
+The incident lead me to greater reflection on ongoing measures needed to prevent participant drop out for due to cultural tensions and negative affect to the working community. These include:
 
 -   An awareness of the danger that those more confident in coding create more involved code problems that need more facilitator time, potentially making others feel less valued.
 -   A concern for the fragility of learners positive affect towards the group game making process and thus the need for initial playful starting and closing activities to be continued beyond initial sessions.
@@ -622,11 +639,9 @@ I was struck that his incident happened during a session where I had not played 
 
 This tensions was resolved partly by freeing up some patterns of collaboration and interaction and removing others.
 
-
-
 The process of parents getting in the way of children's not minding jumping in and invading social space struck me. Together with the frustrations of complexities of larger group work the restrictions created a tension between the suggested community norm of how division of labour was organised.
 
-Thus in the next iteration, rather than the larger groups, smaller groups, allowing some children to work by themselves and others with parents. Avoiding large group framentation and encouraging freedom of participation vs benefitting from parental involvement.
+Thus in the next iteration, rather than the larger groups, smaller groups, allowing some children to work by themselves and others with parents. Avoiding large group framentation and encouraging freedom of participation vs benefiting from parental involvement.
 
 These tensions are mirrored in similar research and were highlighted in the practitioner interviews that I conducted.
 
@@ -645,17 +660,17 @@ One design principle explored in the literature review [@resnick_designing_2013]
 
 INSERT SIDE BY SIDE SCREEN SHOT
 
+The a game template served a similar purpose. This is explored in the next section.
 
-The next chapter explores responses to this aspect in more detail.
-Link
-
-MOVE NEXT?
-
-
+The next chapter explores responses to the aspect of identity in more detail.
 
 **Narrative summary of conflict**
 
-The conflict comprised of compounding factors.
+The conflict comprised of compounding factors and resulted in a lack of desire to complete coding activities before fully engaging with them.
+
+In the initial stages the families were not able to reconcile the obstacles
+
+The solutions
 
 ### 2. Participant conflict due to lack of relevant technical support
 
@@ -686,72 +701,80 @@ https://web.archive.org/web/20180426051205/http://phaser.io/tutorials/making-you
 As preparation for the sessions I had followed the tutorial. When the  and adapted it. I removed out as much code as possible and thus simplifying the structure and readability.
   https://github.com/glitch-game-club/glitch-game-club/blob/master/games
 
+Other interventions were called for directly by parents. Two relevant and relates requests happened at the end of P1.
 
-Other interventions were called for directly by parents. Some were slightly unexpected. in particular the call for tutorials.  Despite the general agreement that taught input in class time was not welcome, support resources that did teach coding materials would be welcomed by some families.
+One was a call for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an studio approach. Another was a request for additional supporting resources which explained the coding structures used in accessible but detailed ways. A request which hinted at a more structured, instruction based approach.
 
-
-**Learner choice over game design vs templated approach**
-
-Learners struggled with too much freedom of choice in a number of ways. Most specifically starting from scratch appeared unrealistic for this group due to technical level of coding availability. Similarly, there was at times frustration if learners were not able to implement a feature they wanted to add to the game next:
-
-
-While personal expression can facilitates engagement and motivation it can lead to confict if desired changes are not realistic. For example there was conflict over desire for a 3d game in this phase. A 3d bee design of one participant which happened when there was no framework.
-Present a wide range of different kinds of design patterns that learners can add to their game in the order they choose (with some exceptions).
-
-As such I adapted a game template used in a Phaser tutorial. Thus the design started to follow the Use-Modify-Create model to limit learner anxiety for novice coders and to scaffold the acquisition of coding and computational thinking concepts [@lee_computational_2011]. Using a starting template had a number of benefits: to increase speed of feedback from learner input, to reduce coding syntax knowledge needed in starting from scratch, x
-
-In order to accelerate the process of making a game to fit into contextual expectations of an acceptable project timeframe, I pre-chose the genre of game to be made and based on my previous teaching experience, analysis of literature and knowledge of platform games, I pre-prepared a set of coded example and tutorials to implement a range of game design patterns.
-
-
-**Documentation / Support Tensions**
- <!-- NOTE -
- The language used, affordances, 2nd stimulation, practices, needs clarification.
-  -->
-
-Most forms of future documentation and support were originated at this stage. This section specifically addresses the evolution of documentation via analysis of the development of the resources.
+However, interview data from participants placed great value on the flexibility of the approach which allowed participants to choose what they wanted to add to their game next.
 
  <!-- NOTE - I am not totally sure it is necessary. Could it be collapsed or presented in another part of this chapter.
  NOTE - Try to summarise exactly what the message is here.  
  NOTE - how can this be more analytical.  -->
 
 
- **Resolution - Use of simple code examples which demonstrate the pattern in isolation**
+**Structuring a game template**
 
- Code examples were initially the starting resource. The idea being it was quick to see the behaviour in context. This was changed after this iteration based on the difficulty of finding the relevant section on step-by-step resources.
+In response, at the start of P3 I further adapted a game template used in a Phaser tutorial and other techniques I had encountered in similar resources. Thus the design started to follow the Use-Modify-Create model to build familiarity with and to scaffold the adaptation and use of coding constructs [@lee_computational_2011].
 
- These code example are a staple of professional sharing and problem solving practice.
- They exist on the Phaser website, however their use there is not consistent and sometimes, as with many developer created documentation, focused on demonstrating the code constructs in isolation rather than in context.
+DESCRIBE IN MORE DETAIL THE AFFORDANCES?
+FIND MORE ON BLOCKS ETC
+EXAMPLE OF CODE STRUCTURE?
+  - USE OF PHASER 2?
+  - BLOCK SIZE TO MATCH PISKEL
 
- **Non-linear step-by-step instructions**
+In line with this research, I posited that using a starting template would to increase speed and consistency of feedback from learner input, to reduce coding syntax knowledge needed in starting from scratch, and thus reduce learner anxiety for novices. This approach responds to the feedback from the participant that more hands on time with tools would have really helped them.
 
- Longer form step by step tutorials are common in computing education. Examples can be found in Code Academy, and in the education resources of RPi foundation. Many examples talking learners through steps to build a game can be found online with varied amount of explanation of underlying constructs and concepts. I started my journey learning JS games using some provided by Mozilla and the Phaser developers.
+The impact of this starting template is explored in the following chapter.
 
- The approach used in the step based documentation I created varies from many in that rather than choosing a defined order users can choose which order they want to add game elements. The use of GDP aids the learner navigation of this process. This does add challenges however to the documentation authouring process.
 
- <!-- An example of parent Sh interaction with long form tutorial follows. Sh engaged with the long form resources. While this process did not involve dialogue, the recording of her screen allows for a detailed description of how the resources was used.
+**Linear and stand-alone tutorial and code snippet resources**
 
- Sh opens browswer to see list of code Examples, navigates to page, sees list of chapters, selects GDP pattern name, then follows along.
- FIND THIS EXAMPLE AND WRITE IT UP / SEE WHAT IT ADDS TO THIS SECTION. -->
+<!-- Longer form step by step tutorials are common in computing education. Examples can be found in Code Academy, and in the education resources of RPi foundation. Many examples talking learners through steps to build a game can be found online with varied amount of explanation of underlying constructs and concepts. I started my journey learning JS games using some provided by Mozilla and the Phaser developers. -->
 
- Interestingly, the online menus was not used by participants in any regular or consistent way. However, it did have a trickle down effect. Some trailblazing participants did either browse it, use it to try to solve problems or were referred to it my the facilitators. The patterns that those learners implemented were then remarked upon by other learners and sometimes adopted via peer teaching.
+I struggled to resolve how best to provide support coherently in a way which met the tension of providing background concepts and explanations of coding constructs to those that wanted it.
 
- <!-- As explored in the literature review, it is difficult to explore this pedagogical approach relation to other similar programmes due to the lack of data on specifics of the learning materials presented to participants. -->
+I began by creating discreet code examples and then tutorials of how to add new elements to the starting game template. Code examples the first resources created. As explored in the literature review, the use of code examples or snippets is a common professional problem solving practice. They allow users to see the behaviour in context with the code and output side by side. While code examples existed on the Phaser website, their use there is not consistent or structured for novices. As with many developer created documentation, focused on demonstrating the code constructs in isolation rather than in the context of any particular game.
 
- **Linear support tutorials**
+So instead, I began each code snipped with a very stripped down version of the starting 2D platformer game template and added the code examples within this code framework. Ideally each pattern added builds familiarity with the code structure.
 
- While a manual was available, few participants worked their way through it chapter by chapter. While I created this for the planners suited to this way of working and in response to feedback from parents in early designs that foundation knowledge would be useful, in practice, once their template game was up and running, there was little incentive to do use this resource. In terms of the objectives of making a playable game or adding particular patterns to the game the step by step resources would have involved backtracking. The process would have value to reinforce computing concepts present in the design.
+For each code example I created a text based step-by-step  documentation.  While the collection of tutorials took the form of chapters of an online book, readers were encouraged to tackle them in any order. In practice each chapter was printed out for participants and linked to from the list of code examples. Thus rather than choosing a defined order readers could choose which order they wanted to add game elements.
 
- The foundational concept here was that after making the game from a template. The linear resources would explain all underlying concepts that the starting template had initially abstracted away from the participants.
+While writing self-contained tutorials added a challenge to the documentation authouring process, the documents, especially when printed became a vital resource for this community.
 
- In my journal I named this concept _meeting yourself in the middle_ to represent the possibility of retracing the process of learning from first principles.
- Narratively the equivalent of a prequel.   
+However, as these tutorials took as a starting point the code of the starting template and did not attempt to explain that, they  did not however resolve the issue of participants wanting resources that explained these core constructs and underlying concepts.
+
+**Meeting yourself in the middle**
+
+Thus I created opening chapter of the online manual which were more traditional in format and contained foundational knowledge. I wondered how to best frame the relationship between these chapters and the self-contained ones described above. In practice, as user had started with a template game that is already up and running, to use this resources which would have involved backtracking.
+
+I named this concept _meeting yourself in the middle_ to represent the possibility of retracing the process of learning from first principles. The key concept here was that after making the game from a template, these foundational chapters resources are available at any time to explain all underlying concepts that the starting template had initially abstracted away from the participants. Thus the process would have value to reinforce computing concepts present in the design. Narratively these chapters form the equivalent of a prequel for readers interested in the full story.
+
+<!-- An example of parent Sh interaction with long form tutorial follows. Sh engaged with the long form resources. While this process did not involve dialogue, the recording of her screen allows for a detailed description of how the resources was used.
+Sh opens browswer to see list of code Examples, navigates to page, sees list of chapters, selects GDP pattern name, then follows along.
+FIND THIS EXAMPLE AND WRITE IT UP / SEE WHAT IT ADDS TO THIS SECTION. -->
+
+<!--
+MOVE THIS TO THE NEXT BIT?
+Interestingly, the online menus was not used by participants in any regular or consistent way. However, it did have a trickle down effect. Some trailblazing participants did either browse it, use it to try to solve problems or were referred to it my the facilitators. The patterns that those learners implemented were then remarked upon by other learners and sometimes adopted via peer teaching. -->
+
+<!-- As explored in the literature review, it is difficult to explore this pedagogical approach relation to other similar programmes due to the lack of data on specifics of the learning materials presented to participants. -->
 
 #### Tensions and related to navigation of various documentations sources
 
-The previous stage had created a variety of supporting documents and processes. In phase two I struggled to communicate these options consistently and effectively to students.
+The previous stage had created a variety of supporting documents and processes. However at the start of P3 I still had not managed to devise a system to communicate these options consistently and effectively to students. My initial attempts were a list of code examples in a shared google document and printed out self-contained chapters.
+
+This process was initially confusing for participants. Thus while these resources were developed in response to one conflict they introduced new tensions. Specifically navigation of the resources and how they fitted together.
 
 **Use of a collection of game design patterns**
 
+I decided to create a web page to house this collection of code examples, the starting template and a link to the online book of step-by-step resources. 
+
+
+
+EDIT THIS DOWN AND FIND THE KEY THEME HERE - MERGE WITH NEXT SECTION IF POSSIBLE.
+
+
+MOVE?
 In PBL, UDL and other models - learner choice and building agency is shown to be of value in increasing engagement and ownership over learning. However, building the relevant knowledge to identify, agree on and implement game patterns from scratch takes time and without relevant scaffolding too so long that it negatively impacted motivation.
 
 Learning resources linked to game design patterns were presented in a menu format. They were made more accessible with graphics focused on the player experience rather than underlying coding constructs. The purpose of this design work was to;
@@ -763,15 +786,15 @@ Learning resources linked to game design patterns were presented in a menu forma
 Some of these were aesthetic in nature to do with the graphical representation of game characters, hazards and background images. Some most accurately described as game mechanics including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned other fundamental aspects concerning game space including: size of game world,
 
 
-
-
 THE FOLLOWING IS EXPLORED IN EXAMPLE ABOVE - RELATE IT SOMEHOW AND FIND ANALYSIS HERE.
 There were two main ways of approaching adding a new pattern. One to examing a code example which was built around the same code base.
 
 This would involve searching for new code constructs and notes in the code designed to orientate the learner, alerting them to the location and purpose of the relevant code. The other was longer form step by step help.
 
 
-#### Structuring supporting resources
+#### Structuring the pattern collection
+
+This section goes into detail of different themes the game pattern collection. This is relevant to RQ1 as this structuring mirrors and has the potentials to reinforce the process of analysing game elements. Done via games at the start of sessions.
 
 In trying to organise and represent code examples to participants in a logical way I drew on existing frameworks of game elements. Initial design were just in response to grouping participant requests. I experimented with different themes to contains these and also the concept of mapping the different challenges by difficulty on a map via structuring via concentric rings.
 
@@ -850,17 +873,16 @@ An additional rationale for this process was to help reduce potential internal b
 
 In later chapters I explore the impact of attempts to resolve some of tensions explored above via recordings of data.
 
-For the remainer of this chapter a short description of my attempst to resolve the play paradox between learner expression and choice and the curricular contents.
+This section addresses my interventions to resolve the play paradox between learner expression and choice and the curricular contents.
 
 The end result of this conflict being (justified) inaction - which helped to provide the focus of this study.
-
-
-#### Learning Dimensions Map
 
 In this phase, I adapted and extended resources to suit use in more formal learning environments, e.g. particularly a secondary computing classroom.
 
 
 In learning environments where there is a lot of choice assessing learners via observation is beneficial. Rather than deciding what you want to teach and testing students on that area, you can map the learning happening in an authentic activity.
+
+#### Learning Dimensions Map
 
 When researching hands-on tinkering in Science museums Bevan and Petrich [-@petrich_it_2013] worked with educators to examine video footage of families interacting with exhibits to make a structured list of the learning they observed. The resulting map of learning dimensions included underlying science concepts but also contained more general skills and helping behaviours involved in exploratory learning processes.
 
@@ -890,7 +912,16 @@ While this is an informal way of using maps the are other approaches that are mo
 _Map of Learning Dimensions of the 3M Game Making Approach_
  -->
 
-### Limits to this map - MOVE?
+ **Including Coding Concepts in the Learning Map and including Code Cards with links to online Concepts**
+
+ Recap here the choice of coding concepts rather that CT in more abstract terms.
+
+ - Make Code cards which contained links to game design patterns and the different component concepts
+ - (see Eriksson and Bjork)
+ - Draw on material and critique in chapter on semantic profiles / waves.
+
+
+**Limits to the learning dimensions map**
 
 This map was designed to link with particular conceptions of learning whilst still retaining a sense of the uniqueness of the affordances of this design. The settings are, CT in school curriculums, systems thinking, design approaches. These align broadly with a STEM approach. The rationale behind this is that Game Making commonly aligns with these curriculum areas and they are particularly suited to explore via iterative game making.
 NOTE - EXPLAIN WHERE THAT IS EXPLORED IN MORE DETAIL.
@@ -910,14 +941,6 @@ Note - while the use of these skills is not unique to game making and common to 
 NOTE - The map could easily be changed to reflect this or other foci of teachers / researchers.
 
 
-
-#### Including Coding Concepts in the Learning Map and including Code Cards with links to online Concepts
-
-Recap here the choice of coding concepts rather that CT in more abstract terms.
-
-- Make Code cards which contained links to game design patterns and the different component concepts
-- (see Eriksson and Bjork)
-- Draw on material and critique in chapter on semantic profiles / waves.
 
 <!-- A theme to follow up in the Maps / personal learning chapter is that of picking up on some of the behaviour of participants, especially that of experienced parents, experience either in coding practices of supporting their children. Once identified, how could beneficial interactions be encouraged in the next iteration of design.
 
@@ -992,12 +1015,7 @@ REPLACE WITH 360 OF MAPS
 <!-- Working with learner stress ##### Building Identities as Game Makers
 
 NOTE - THIS COULD WORK IN THE INTRODUCTION TO THE CHAPTER - LINK WITH PREVIOUS ONE.
-
-
-
-
 ### not sure
-
 
 One warm activities that took on a life of its own was a group activity of taking a Bartle test (what kind of game player are you) as extended spectrum line/grid activity [FIND DESCRIPTION SOURCE]. The process of exploring identity in this way surfaced the cheekiness of some young people and the pleasure they took in demonstrating their playful mischievousness. I began to make journal notes on this subject and talk to other games study practioners. I began to ask the question can the surfacing maker types (as per player types) encourage awareness and celebrate the emerging practices that the community was producing.
 
@@ -1036,7 +1054,7 @@ My journal notes see an evolution of attempts to try to build into the program, 
  -   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other users map in MakeCode iteration which is digital and analysis of data showed an emerging tensions. There are benefits of mapping it in a more visual and collaborative way as shown by the attempts to do it with paper and individuals mapping their progress with markers.
 
 A much more collaborative online map which showed other peoples progress would be possible with an investment in time and perhaps more expertise in software development. Perhaps moving towards a gamification league and tactics. This could cause potential issues with a more competitive atmosphere. -->
-(Appendix R.4.1)
+
 <!-- How much to write on this here? Or the discussion chapter? -->
 
 <!-- Interactions in the interpersonal plane in this model are described as guided participation. Guided participation in not a prescriptive  pedogogy or set of activities, rather it refers to any activities and interactions between learning community members which contribute towards shared endeavours.
@@ -1060,11 +1078,6 @@ Limit the type of game to one kind. Offer a significant but limited menu of miss
 **Learners take on features which are too advanced or complex for their current coding level**
 (Appendix R.4.1)
 The use of a physical map on which GDP were arranged aimed to communicate which patterns were more complicated to implement.  Starting patterns limited the maximum complexity of missions and present patterns to encourage learners to start with ones that involve simple code changes but return a large change in terms of gameplay experience.
-
-
-
-
-
 
 
 
